# titanic-classifier

./: .gitignore  README.md  docker-compose.yml  requirements.txt
config/: titanic_config.json
data/: titanic_output_table.csv  titanic_processed.csv
models/: scaler.pkl  titanic_RandomForestClassifier_full.pkl
notebooks/: Dockerfile  Titanic_ideation.ipynb  Titanic_inference.ipynb  requirements.txt  scaler.pkl
notebooks/.ipynb_checkpoints/: Titanic_ideation-checkpoint.ipynb  Titanic_inference-checkpoint.ipynb
scripts/: run_titanic_pipeline_and_tests.sh
src/: Dockerfile  pyproject.toml  titanic_forecast.py  titanic_pipeline.py  titanic_preprocessing.py
tests/: test_titanic_preprocessing.py
