[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
pandas = "~2.2"
joblib = "~1.4"
# We need to lock scikit-learn as models were built on older versions of the library
scikit-learn = "~1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
